Nel terminale, scrivendo npm run start, appare il console.log di index.js

--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UmbertoCarbone/node-hello-world.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Umberto Carbone by class Boolean #146",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/UmbertoCarbone/node-hello-world/issues"
