Installato dotenv + creato .gitignore per nascondere le cartelle non create da noi

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "watch": "node --watch index.js"
+    "watch": "node --watch index.js --env-file=.env"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
     "url": "https://github.com/UmbertoCarbone/node-hello-world/issues"
   },
   "homepage": "https://github.com/UmbertoCarbone/node-hello-world#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  }
 }
