--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "watch": "node --watch index.js --env-file=.env"
+    "watch": "node --watch index.js --env-file=.env "
   },
   "repository": {
     "type": "module",
@@ -21,7 +21,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "clack": "^0.1.0",
+    "chalk": "^5.4.1",
     "dotenv": "^16.5.0"
-  }
+  },
+  "type": "module"
 }
